<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scheduleType"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:showDividers="end"
    tools:context=".view.edit.InputFragment">

    <LinearLayout
        android:id="@+id/scheduleTypeRow"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ToggleButton
            android:id="@+id/toggleEveryweek"
...
            android:textColor="@color/toggle_button_text_scheduletype"
            android:textOff="@string/everyweek"
            android:textOn="@string/everyweek"
            android:theme="@style/AccentButtonTheme" />

        <ToggleButton
            android:id="@+id/toggleEveryMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_scheduletype"
            android:checked="false"
            android:clickable="false"
            android:tag="@string/schedule_month"
            android:textColor="@color/toggle_button_text_scheduletype"
            android:textOff="@string/everymonth"
            android:textOn="@string/everymonth" />

        <ToggleButton
            android:id="@+id/toggleNumOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/toggle_button_scheduletype"
            android:checked="false"
            android:clickable="false"
...
            android:textOff="@string/label_text_evweek"
            android:textOn="@string/label_text_evweek" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/scheduleInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

    </FrameLayout>
...
