...
    <string name="day_monday">月</string>
    <string name="day_tuesday">火</string>
    <string name="day_wednesday">水</string>
    <string name="day_thursday">木</string>m
    <string name="day_friday">金</string>
    <string name="day_saturday">土</string>
    <string name="everymonth">毎月</string>
    <string-array name="list_weekday_select">
        <item>日曜日</item>
        <item>月曜日</item>
        <item>火曜日</item>
        <item>水曜日</item>
        <item>木曜日</item>
        <item>金曜日</item>
        <item>土曜日</item>
    </string-array>
    <string-array name="list_trash_select">
        <item>もえるゴミ</item>
        <item>もえないゴミ</item>
        <item>プラスチック</item>
        <item>ビン</item>
        <item>カン</item>
        <item>ペットボトル</item>
        <item>古紙</item>
        <item>粗大ごみ</item>
...
    <string name="text_title_exclude_day_of_month">例外日の設定</string>
    <string name="text_title_common_exclude_day_of_month">共通例外日の設定</string>

    <string name="text_exclude_day_of_month_button">例外日を設定</string>
    <string name="text_common_exclude_day_button">共通例外日を設定</string>
    <string name="text_exclude_day_of_month_apply_button">設定</string>
    <string name="text_register_trash_button">登録</string>
    <string name="text_cancel_register_trash_button">キャンセル</string>
    <string name="text_trash_name_input_placeholder">ゴミの名前を入力</string>
    <string name="text_weekday_toggle_button">毎週</string>
    <string name="text_monthly_toggle_button">毎月</string>
    <string name="text_ordinal_weekday_toggle_button">固定の週と曜日</string>
    <string name="text_interval_weekday_toggle_button">隔週</string>
...
